--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
     </div>
     <!-- Footer -->
     <footer>
-        <p>© 2025 Ashwaegh | All Rights Reserved</p>
+        <p>© 2025 Ashwamegh | All Rights Reserved</p>
         <p>Designed & Developed by <strong>Ritesh Gaurinath Marve(CSE,3rd year</strong>
         assisted by Dikshant Athawale(CSE,3rd year)</p>
     </footer>
