--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
      
          <div class="contact-card">
              <img src="sir.jpg" alt="Teacher Coordinator" class="contact-photo">
-             <h5>Prof. R. Verma</h5>
+             <h5>Prof. P. Karamsot</h5>
              <p>Sports Faculty</p>
             
          </div>
